NOJIRA: replace instanceof checks with pattern matching